[package]
name = "github-app-token"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = "thin"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive", "env"]}
indoc = "1.0"
jwt-simple = "0.11.0"
reqwest = { version = "0.11.10", features = ["blocking", "json", "rustls-tls", "trust-dns"], default-features = false }
serde_json = "1.0.81"
